# a-lot-of-bq-subscriptions

./: 01-create-bq-tables.sh  02-create-schema.sh  03-create-topic.sh  04-create-subscriptions.sh  05-workload-identity.sh  06-prepare-gke.sh  07-test-pod-deploy.sh  08-confirm-bq.sh  bq-schema.json  t.yaml  topic-avro-schema.json  topic-schema.proto
app/: Dockerfile  build-image-and-register.sh  main.py  pod.yaml  pyproject.toml
